# os

./: .gitignore  CHANGELOG.md  LICENSE  README.md  squirrel-os.cabal
.github/workflows/: haskell.yml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: hasel.typ
eichhoernchen-master-mcp/: .gitignore  DEPLOYMENT-SUMMARY.md  LICENSE  README.md  WINDOWS-CONFIG.md  claude-desktop-config.example.json  package-lock.json  package.json  tsconfig.json
eichhoernchen-master-mcp/src/: constants.ts  hasel.ts  index.ts  schemas.ts  shared.ts  types.ts
eichhoernchen-master-mcp/src/tools/: browser.ts  clipboard.ts  dns.ts  ipfs.ts  pipeline.ts  system.ts  web.ts
mcp-server/: README.md  example.config.json  package-lock.json  package.json
mcp-server/src/: constants.ts  hasel.ts  index.ts  schemas.ts  shared.ts  types.ts
notes/: ai-capabilities-overview.md  environment_report.md
parquet/: build_artifacts.parquet  directories_summary.parquet  extensions_summary.parquet  files_inventory.parquet  generate_parquet.py  haskell_analysis.parquet  investigation_metadata.parquet  source_type_summary.parquet
src/: Hasel.hs
src/Hasel/: Core.hs  Emoji.hs  Repl.hs  SVG.hs  Typst.hs  Unicode.hs  Universe.hs
src/Image/: Loader.hs
src/LLM/: OpenAI.hs
src/MCP/: JsonRpc.hs  Protocol.hs  Server.hs
src/MCP/Transport/: Stdio.hs
