cabal-version:      3.0

name:               squirrel-os
version:            0.2.0.0
synopsis:           HASEL — Haskell + Emoji Language. FP worlds united under one umbrella.
license:            MIT
license-file:       LICENSE
author:             xoxo
maintainer:         fritsch.david@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Hasel
        Hasel.Unicode
        Hasel.SVG
        Hasel.Typst
        LLM.OpenAI
    build-depends:
        base ^>=4.18.3.0
      , text
      , bytestring
      , aeson
      , http-client
      , http-client-tls
      , http-types
    hs-source-dirs:   src
    default-language: Haskell2010

executable squirrel-os
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0
      , text
      , squirrel-os
    hs-source-dirs:   app
    default-language: Haskell2010
